--- a/tools/admin/manifest.json
+++ b/tools/admin/manifest.json
@@ -2,5 +2,9 @@
   "version": "0.5.9",
   "deb_version": "0.5.9-1",
   "rpm_version": "0.5.9-1",
-  "urlbase": "https://d3sqy0vbqsdhku.cloudfront.net"
+  "urlbase": "https://d3sqy0vbqsdhku.cloudfront.net",
+  "warehouseBaseUrl": "https://packages.meteor.com",
+  "releases": {
+    "stable": "0.6.0"
+  }
 }
