--- a/tools/admin/manifest.json
+++ b/tools/admin/manifest.json
@@ -3,7 +3,7 @@
   "deb_version": "0.5.9-1",
   "rpm_version": "0.5.9-1",
   "urlbase": "https://d3sqy0vbqsdhku.cloudfront.net",
-  "warehouseBaseUrl": "https://packages.meteor.com",
+  "warehouseBaseUrl": "https://warehouse.meteor.com",
   "releases": {
     "stable": "0.6.0"
   }
