Add README to gitattributes
And make other entries more specific

--- a/packages/.gitattributes
+++ b/packages/.gitattributes
@@ -1,4 +1,5 @@
 # Make sure git uses line endings that match how files get regenerated
 # (by 'npm shrinkwrap' and meteor_npm.js)
-npm-shrinkwrap.json eol=lf
-.gitignore          eol=lf
+*/.npm/npm-shrinkwrap.json  eol=lf
+*/.npm/.gitignore           eol=lf
+*/.npm/README               eol=lf
